--- a/package.json
+++ b/package.json
@@ -11,16 +11,25 @@
     "cdk": "cdk"
   },
   "devDependencies": {
+    "@aws-sdk/client-s3": "^3.574.0",
+    "@aws-sdk/client-sfn": "^3.574.0",
+    "@aws-sdk/lib-dynamodb": "^3.574.0",
+    "@aws-sdk/s3-request-presigner": "^3.574.0",
+    "@aws-sdk/util-create-request": "^3.568.0",
+    "@aws-sdk/util-dynamodb": "^3.574.0",
+    "@aws-sdk/util-format-url": "^3.567.0",
     "@types/jest": "^29.5.12",
     "@types/node": "20.12.7",
+    "aws-cdk": "2.140.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.2",
-    "aws-cdk": "2.140.0",
     "ts-node": "^10.9.2",
     "typescript": "~5.4.5"
   },
   "dependencies": {
     "aws-cdk-lib": "2.140.0",
+    "axios": "^1.6.8",
+    "cheerio": "^1.0.0-rc.12",
     "constructs": "^10.0.0",
     "source-map-support": "^0.5.21"
   }
