--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   },
   "scripts": {
     "build": "tsc",
+    "deploy": "npm run build && cdk deploy",
     "watch": "tsc -w",
-    "test": "jest",
+    "test": "jest --config jest.config.ts",
     "cdk": "cdk"
   },
   "devDependencies": {
@@ -21,6 +22,7 @@
     "@types/jest": "^29.5.12",
     "@types/node": "20.12.7",
     "aws-cdk": "2.140.0",
+    "esbuild": "^0.21.1",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
